--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,7 @@ h2 {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .video-title {
     font-size: clamp(0.9rem, 5vw, 1.2rem);
     padding: 0 0.5rem;
@@ -375,6 +375,12 @@ h2 {
     margin-bottom: 2rem;
     max-width: 100%;
   }
+
+  iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 }
 
 
