--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,10 @@ h2 {
     box-sizing: border-box;
 }
 
+.ensembles-text-right a {
+    font-weight: 600;
+}
+
 .ensembles-text-center {
         order: 1; 
     width: 100%; 
